2009-12-15  John W. Eaton  <jwe@octave.org>

	* README.MSVC: Delete section about obtaining glob library.
	* bootstrap.conf (gnulib_modules): Add fnmatch and glob to the list.
	* common.mk (LIBGLOB): Delete variable.
	(do_subst_config_vals): Don't substitute it.
	* octave-bug.in, octave-bug.cc.in: Eliminate LIBGLOB variable.
	* configure.ac: Don't check for glob.h or the glob and fnmatch
	functions.  Eliminate LIBGLOB variable.

2009-12-11  Rik <octave@nomad.inbox5.com>

	* HACKING: Elaborate which DIRNAME to use for --gnulib-srcdir option.

2009-12-11  John W. Eaton  <jwe@octave.org>

	* configure.ac: Add $PTHREAD_LIBS to $LIBS and $PTHREAD_CFLAGS
	to $CFLAGS for subsequent tests.

2009-12-11  Rik <octave@nomad.inbox5.com>

	* Makefile.am: remove install-extras target and use automake syntax to
	distribute NEWS file.
	* examples/Makefile.am: remove install-images target and use automake
	syntax to distribute image data.

2009-12-11  John W. Eaton  <jwe@octave.org>

	* .dir-locals.el: Correctly set indent-tabs-mode for ChangeLogs,
	and Makefiles.

	* common.mk (cp_update_rule): New macro.

2009-12-10  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in, mkoctfile.cc.in: If output file is specified and
	it does not end in output_ext, append output_ext.

2009-12-10  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in, mkoctfile.cc.in: When compiling files in
	subdirectories, place object files in current directory by
	default.

2009-12-10  John W. Eaton  <jwe@octave.org>

	* mkoctfile.cc.in: Accept long options with single -.

2009-12-10  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in: Accept long options with single -.

2009-12-09  John W. Eaton  <jwe@octave.org>

	* HACKING: Clarify gnulib checkout and use.

2009-12-09  John W. Eaton  <jwe@octave.org>

	* configure.ac: Remove URL argument from AC_INIT.
	Use AC_CONFIG_AUX_DIR.  Move AM_INIT_AUTOMAKE after other
	AC_CONFIG setup macros.  Use gl_EARLY and gl_INIT for gnulib.