@@ -1,3 +1,7 @@
+2009-12-19  Jaroslav Hajek  <highegg@gmail.com>
+
+	* data.cc (Fsize_equal): Allow calling with zero arguments.
+
 2009-12-15  John W. Eaton  <jwe@octave.org>
 
 	* README.MSVC: Delete section about obtaining glob library.
